# esp32-vl53l1x-test

./: CMakeLists.txt  LICENSE  Makefile  README.md
main/: CMakeLists.txt  Kconfig.projbuild  component.mk  main.c  vl53l1_platform.c  vl53l1_test.c
